[gd_scene load_steps=13 format=3 uid="uid://jn66l3ncfy7h"]

[ext_resource type="Script" path="res://Scenes/Main/GameServer.gd" id="1_8p4xf"]
[ext_resource type="Script" path="res://Scenes/Main/PlayerVerification.gd" id="2_jag3l"]
[ext_resource type="Script" path="res://Scenes/Main/StateProcessing.gd" id="3_gtg0g"]
[ext_resource type="Script" path="res://Scenes/Main/LootProcessing.gd" id="4_cdbp5"]
[ext_resource type="Script" path="res://Scenes/Main/CiudadPrincipalHandler.gd" id="5_418n1"]
[ext_resource type="Script" path="res://Scenes/Main/DamageProcessing.gd" id="5_r2ty0"]
[ext_resource type="Script" path="res://Scenes/Main/Mapa2Handler.gd" id="6_l7tct"]
[ext_resource type="PackedScene" uid="uid://dy48xkoyv3aow" path="res://Scenes/Maps/ServerCiudadPrincipal.tscn" id="6_lvwo1"]
[ext_resource type="Script" path="res://Scenes/Main/StatsCalculated.gd" id="6_ng6qs"]
[ext_resource type="PackedScene" uid="uid://bun4nh1lue3fo" path="res://Scenes/Maps/ServerMapa2.tscn" id="8_1aqku"]
[ext_resource type="Script" path="res://Scenes/Main/CiudadCentralHandler.gd" id="9_uviv6"]
[ext_resource type="Script" path="res://Scenes/Npcs/CameraMen.gd" id="10_jsms6"]

[node name="GameServer" type="Node"]
script = ExtResource("1_8p4xf")

[node name="PlayerVerification" type="Node" parent="."]
script = ExtResource("2_jag3l")

[node name="StateProcessing" type="Node" parent="."]
script = ExtResource("3_gtg0g")

[node name="LootProcessing" type="Node" parent="."]
script = ExtResource("4_cdbp5")

[node name="DamageProcessing" type="Node" parent="."]
script = ExtResource("5_r2ty0")

[node name="StatsCalculated" type="Node" parent="."]
script = ExtResource("6_ng6qs")

[node name="CiudadPrincipalHandler" type="Node" parent="."]
script = ExtResource("5_418n1")

[node name="Mapa2Handler" type="Node" parent="."]
script = ExtResource("6_l7tct")

[node name="CiudadCentralHandler" type="Node" parent="."]
script = ExtResource("9_uviv6")

[node name="CiudadPrincipal" parent="." instance=ExtResource("6_lvwo1")]

[node name="Mapa2" parent="." instance=ExtResource("8_1aqku")]
position = Vector2(1792, -8)

[node name="CameraMen" type="CharacterBody2D" parent="."]
script = ExtResource("10_jsms6")

[node name="Camera2D" type="Camera2D" parent="CameraMen"]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(448, 24)
